--- a/Barberia Alura/Assets/Css/Style.css
+++ b/Barberia Alura/Assets/Css/Style.css
@@ -12,6 +12,8 @@ header{
     margin: 0 auto;
     
 }
+
+
 nav{
     position: absolute;
     top: 125px;
@@ -99,13 +101,14 @@ footer{ /*pie de pagina*/
     margin: 20px;
 }
 
-main{ /*ajustamos elementos del formulario*/
-    width: 940px;
+.main-index{ /*ajustamos elementos del formulario*/
+    width: 0 auto;
     margin: 0 auto; /* espacio exterior arriba/abajo, derecha/izquierda*/
+    background: linear-gradient(#FEFEFE, #888888);
 }
 
 form{
-    margin:40px 0 ; /*arriba/abajo, derecha/izquierda de todo el formulario*/
+    margin:40px 20px ; /*arriba/abajo, derecha/izquierda de todo el formulario*/
 }
 
 form label, form legend{
@@ -167,10 +170,18 @@ td, th{
     width: 100%;
 }
 
+
+
 .titulo-principal{
     text-align: center;
     font-size: 2em;
     margin: 1em 0 1em;
+}
+
+.principal{
+    padding: 3em 0;
+    width: 940px;
+    margin: 0 auto; 
 }
 
 .principal p{
@@ -192,14 +203,59 @@ td, th{
 }
 
 .diferencial{ /*imagen */
-    width: 60%;
+    margin: 15px 0 15px 15px;
+    width: 30%;
+    transition: 200ms;
+    box-shadow: 10px 10px 30px 15px  #000000;
+  
+}
+
+.lista{
+    float: left;
+    margin: 0 0 0 300px;
+    
+}
+
+.item{
+    line-height: 2.5;
+    
+}
+
+
+.diferenciales{
+    margin: 0 0 0 20px;
+}
+
+.diferencial:hover{
+    opacity: 0.3;
 }
 
 .mapa{
     padding: 3em 0;
+    
+    margin: 0 auto;
+    width: 940px;
 }
 
 .mapa p{
     margin: 0 0 1em 0;
     text-align: center;
+}
+
+.mapa-contenido{
+    width: 0 auto;
+    
+}
+
+.video{
+    width: 560px;
+    margin: 1em auto 0 auto;
+}
+
+@media screen and (max-width:480px) {
+    
+    body{
+        width: 0 auto;
+    }
+    
 }
